2007-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -buildDate]): new method
	that returns the build date of SOGo in the template.

2007-08-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-_flattenedRecords:records]): when the c_cn field is empty,
	returns set a formatted string with the concatenation of
	c_givenname and c_sn as the displayName.

	* SoObjects/Mailer/SOGoMailAccounts.m ([SOGoMailAccounts
	-isValidMailAccountName:_key]): prevent unknown accounts from
	being accessed.

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-pathToAttachmentObject]): we no longer need the filename
	extension for SoLookup...

	* SoObjects/Mailer/SOGoMailBodyPart.m ([SOGoMailBodyPart
	-lookupName:_keyinContext:_ctxacquire:_flag]): do not require the
	filename to have an extension, and thus accept any filename.

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-currentCName]): new method that returns the c_name of the
	contact, correctly escaped to be passed by url afterwards.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -flatContentAsString]): pass the NSData
	instance of [self decodedFlatContent] instead of the buggy
	NSString from [super flatContentAsString] to the parser.

2007-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions -deleteAction]):
	new category method to reponds to the "delete" web command on
	drafts.
	([UIxMailActions -deleteAttachmentAction]): new category method to
	reponds to the "deleteAttachment" web command on drafts, taking
	the "filename" url parameter into account.

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForEditing]): new method that retrieve the editable mail
	content.
	([SOGoMailObject -fetchFileAttachmentKeys]): new method that
	returns the body keys for attached files (parts with a "filename"
	attribute).
